# aegeaon_native

./: CMakeLists.txt  LICENSE  README.md  README_en.md  README_zh.md  build_and_install.sh  pyproject.toml  setup.cfg  setup.py
include/aegaeon/: allocator.h  ipc_event.h  kvcache.h  pinned_pool.h
src/: allocator.cpp  ipc_event.cpp  kvcache.cpp  pinned_pool.cpp  python_bindings.cpp
